--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,16 @@
-<%= render "/layouts/navbar", hauteur: "100", searchbar: true %>
+<%= render "/layouts/navbar", hauteur: "100", searchbar: false %>
 
-<%# <%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
-  <%# <div class="searchbar-container text-center">
+<%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
+  <div class="searchbar-container text-center">
     <div class="d-flex searchbar-container">
           <%= f.input :title, label: false,
             placeholder: 'Where do you want to go?',
             wrapper_html: { class: "searchbar-wrapper" },
-            input_html: { class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 60%;" } %>
-          <%# <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button" %>
-    <%# </div> %>
-  <%# </div> %>
-<%# <% end %>
+            input_html: { class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 80%;" } %>
+          <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button" %>
+    </div>
+  </div>
+<% end %>
 
 <div class="content my-3">
   <div class="block-container">
