--- a/app/views/layouts/_searchbar.html.erb
+++ b/app/views/layouts/_searchbar.html.erb
@@ -1,12 +1,11 @@
-<div class="searchbar-container">
-  <div class="col-sm-8 my-3">
-    <%= form_with url: trips_path, method: :get, class: "d-flex align-items-center" do %>
-      <%= text_field_tag :query,
-        params[:query],
-        class: "searchbar form-control rounded-pill mr-2 p-2",
-        placeholder: "Where do you want to travel"
-      %>
-    <%= submit_tag "Search", name: "", class: "button-dark-green rounded-pill" %>
-    <% end %>
+<%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
+  <div class="searchbar-container text-center">
+    <div class="d-flex searchbar-container">
+          <%= f.input :title, label: false,
+            placeholder: 'Where do you want to go?',
+            wrapper_html: { class: "searchbar-wrapper" },
+            input_html: { class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 80%;" } %>
+          <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button" %>
+    </div>
   </div>
-</div>
+<% end %>
