--- a/app/views/trips/index.html copy.erb
+++ b/app/views/trips/index.html copy.erb
@@ -1,4 +1,4 @@
-<%= render "/layouts/navbar", hauteur: "100", searchbar: false %>
+<%= render "/layouts/navbar", hauteur: "100"  %>
 
 <%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
   <div class="searchbar-container text-center">
@@ -17,34 +17,31 @@
       <nav class="col-md-4 col-lg-2 d-md-block sidebar">
         <%= render "/layouts/budgetslider" %>
         <hr>
+
             <h4 class="my-3">Trip Styles</h4>
             <%= f.input :style, legend_tag: false, as: :check_boxes, collection: Trip.where.not(style: nil).pluck(:style).uniq.map { |style| [style.capitalize, style] } %>
         <% end %>
       </nav>
 
-    <div class="col-8 ms-sm-auto col-lg-10 px-md-4">
-      <div class="card-trip-grid">
-        <% @trips.each do |trip| %>
-          <%= link_to trip_path(trip) do %>
-            <div class="card-trip">
-            <% if trip.photo.attached? %>
-              <%= cl_image_tag trip.photo.key, height: 300, width: 400, crop: :fill %>
-            <% else %>
-              <%= image_tag trip.image_url %>
-            <% end %>
-              <div class="card-trip-infos">
-                <div>
-                  <h2><%= trip.title %></h2>
-                  <p><%= trip.comment %></p>
+      <div class="col-8 ms-sm-auto col-lg-10 px-md-4">
+        <div class="card-trip-grid">
+          <% @trips.each do |trip| %>
+            <%= link_to trip_path(trip) do %>
+              <div class="card-trip">
+                <%= image_tag trip.image_url %>
+                <div class="card-trip-infos">
+                  <div>
+                    <h2><%= trip.title %></h2>
+                    <p><%= trip.comment %></p>
+                  </div>
+                  <h2 class="card-planner"><%= trip.planner.first_name %> <%= trip.planner.last_name %></h2>
+                    <%= image_tag trip.planner.image_url, class: "card-trip-user avatar-bordered" %>
                 </div>
-                <h2 class="card-planner"><%= trip.planner.first_name %> <%= trip.planner.last_name %></h2>
-                  <%= image_tag trip.planner.image_url, class: "card-trip-user avatar-bordered" %>
               </div>
-            </div>
+            <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
 <%= render "layouts/footer", position: "relative" %>
