--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -34,11 +34,11 @@
   }
 }
 
-.destinations {
+.trip_destinations {
   margin-top: 20px;
 }
 
-.destination {
+.trip_destination {
   text-align: left;
   margin-top: 10px;
   margin-bottom: 10px;
