--- a/app/views/my/trips/show.html.erb
+++ b/app/views/my/trips/show.html.erb
@@ -2,97 +2,74 @@
 <h1>My trips</h1>
 
 <div class="my_trip_container">
-  <div class="col-12 col-lg-2 my_conversations">
-    <div class="scrollable-content">
-      <ul>
-        <% @trips.each do |trip| %>
-          <% if current_user.id == trip.planner.id && trip.planner.id != trip.tripper.id %>
-            <%= link_to my_trip_path(trip), id: (trip.id == @trip.id ? 'my_conversation' : nil) do %>
-              <li>
-                <strong><%= trip.title %></strong><br><%= trip.tripper.first_name %> <%= trip.tripper.last_name %>
-              </li>
-            <% end %>
-          <% elsif current_user.id == trip.tripper.id && trip.planner.id != trip.tripper.id %>
-            <%= link_to my_trip_path(trip), id: (trip.id == @trip.id ? 'my_conversation' : nil) do %>
-              <li>
-                <strong><%= trip.title %></strong><br><%= trip.planner.first_name %> <%= trip.planner.last_name %>
-              </li>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="scrollable-content" id="col1">
+        <ul>
+          <% @trips.each do |trip| %>
+            <% if current_user.id == trip.planner.id && trip.planner.id != trip.tripper.id %>
+              <%= link_to my_trip_path(trip), id: (trip.id == @trip.id ? 'my_conversation' : nil) do %>
+                <li>
+                  <strong><%= trip.title %></strong><br><%= trip.tripper.first_name %> <%= trip.tripper.last_name %>
+                </li>
+              <% end %>
+            <% elsif current_user.id == trip.tripper.id && trip.planner.id != trip.tripper.id %>
+              <%= link_to my_trip_path(trip), id: (trip.id == @trip.id ? 'my_conversation' : nil) do %>
+                <li>
+                  <strong><%= trip.title %></strong><br><%= trip.planner.first_name %> <%= trip.planner.last_name %>
+                </li>
+              <% end %>
             <% end %>
           <% end %>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-  <div class="col-12 col-lg-5 my_messages">
-    <div class="scrollable-content">
-      <a href="#last_right">Aller à la section 1</a>
-      <%= "Tripper : #{@trip.tripper.first_name} (#{@trip.tripper.id})" %><br>
-      <%= "Planner : #{@trip.planner.first_name} (#{@trip.planner.id})" %><br>
-      <%= "current_user : #{current_user.first_name} (#{current_user.id})" %>
-      <div class="messages">
-        <% rr = @trip.messages.sort_by(&:created_at) %>
-        <% rr.each do |message| %>
-          <div class="message <%= current_user.id == message.user_id ? " right" : "left" %>" id="message-<%= message.id %>">
-            <small>
-              <strong><%= message.user.first_name  %></strong>
-              <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
-            </small>
-            <p <%= message == @trip.messages.last ? "id=mid_scroll_right" : nil %>><%= message.content %></p>
-          </div>
-        <% end %>
-        <%= simple_form_for [@trip, @new_message], url: my_trip_messages_path(@trip.id) do |f| %>
-          <%= f.input :content, as: :text, input_html: { id: 'new_messages', name: 'message[content]' }, label: false %>
-          <%= f.button :submit, id: 'btn_new_messages', value: ">" %>
-        <% end %>
+        </ul>
       </div>
     </div>
-  </div>
-  <div class="col-12 col-lg-5 my_trips" id="column3">
-    <div class="scrollable-content">
-
-      <%= link_to("Trip initial", trip_path(@trip.trip_id)) if !@trip.trip_id.nil? %>
-
-
-      <h4><strong><%= @trip.title %></strong></h4>
-      <p><%= @trip.comment %></p>
-      <div class="destinations">
-        <% if current_user == @trip.planner %>
-          <%= puts "a" %>
-        <% else %>
-
-          <table class="sortable-table">
-            <% @trip.trip_destinations.each do |trip_destination| %>
-              <tr>
-                <td class="sortable-handle"><i class="fa-solid fa-arrows-up-down"></i></td>
-                <td><%= trip_destination.destination.position+1 %></td>
-                <td><%= trip_destination.destination.title %></td>
-                <td><i class="fa-solid fa-arrow-up-right-from-square"></i></td>
-              </tr>
-            <% end %>
-          </table>
-
-        <% end %>
+    <div class="col-md-4">
+      <div class="scrollable-content" id="col2">
+        <a href="#last_right">Aller à la section 1</a>
+        <%= "Tripper : #{@trip.tripper.first_name} (#{@trip.tripper.id})" %><br>
+        <%= "Planner : #{@trip.planner.first_name} (#{@trip.planner.id})" %><br>
+        <%= "current_user : #{current_user.first_name} (#{current_user.id})" %>
+        <div class="messages">
+          <% rr = @trip.messages.sort_by(&:created_at) %>
+          <% rr.each do |message| %>
+            <div class="message <%= current_user.id == message.user_id ? " right" : "left" %>" id="message-<%= message.id %>">
+              <small>
+                <strong><%= message.user.first_name  %></strong>
+                <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+              </small>
+              <p <%= message == @trip.messages.last ? "id=mid_scroll_right" : nil %>><%= message.content %></p>
+            </div>
+          <% end %>
+          <%= simple_form_for [@trip, @new_message], url: my_trip_messages_path(@trip.id) do |f| %>
+            <%= f.input :content, as: :text, input_html: { id: 'new_messages', name: 'message[content]' }, label: false %>
+            <%= f.button :submit, id: 'btn_new_messages', value: ">" %>
+          <% end %>
+        </div>
       </div>
+    </div>
+    <div class="col-md-4">
+      <div class="scrollable-content" id="col3">
+        <%= link_to("Trip initial", trip_path(@trip.trip_id)) if !@trip.trip_id.nil? %>
 
 
+        <h4><strong><%= @trip.title %></strong></h4>
+        <p><%= @trip.comment %></p>
+        <div class="my_trips_destinations">
+          <% if current_user != @trip.planner %>
 
-      <!--
-      <h1><strong><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></strong></h1>
-      <h2><strong><%= @trip.title %></strong></h2>
-      <p><%= @trip.comment %></p>
-      <%= image_tag @trip.image_url, style:"width: 100%;" %>
-      <div class="destinations">
-        <% @trip.trip_destinations.each do |trip_destination| %>
-          <div class="destination">
-            <h4><strong><%= trip_destination.destination.address %></strong></h4>
-            <p><%= trip_destination.destination.description %></p>
-          </div>
-        <% end %>
+            <%= render partial: "shared/draganddrop", locals: {trip: @trip} %>
+
+          <% else %>
+
+          <% end %>
+        </div>
       </div>
-      -->
     </div>
   </div>
 </div>
+
+
 <%= render "layouts/footer", position: "absolute" %>
 
 <script>
@@ -103,31 +80,3 @@
     }
   });
 </script>
-
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script>
-    $(document).ready(function() {
-    $(".sortable-table tbody").sortable({
-      handle: ".sortable-handle",
-      update: function(event, ui) {
-        console.log("a");
-        console.log(event.currentTarget.location.href);
-        var order = $(this).sortable('toArray', { attribute: 'data-id' });
-        $.ajax({
-          type: 'PATCH',
-          url: `/my/trips/${aerer}`,
-          data: { order: order },
-          success: function(response) {
-            console.log("Mise à jour réussie !");
-          },
-          error: function() {
-            console.error("Échec de la mise à jour.");
-          }
-        });
-      }
-    });
-  });
-
-  </script>
