edit du planner

--- a/app/views/planner/trips/show.html.erb
+++ b/app/views/planner/trips/show.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="button-container">
-    <%= link_to 'Edit my trip', edit_planner_trip_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show", data: { turbo_method: :patch } %>
+    <%= link_to 'Edit my trip', edit_planner_trip_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show" %>
   </div>
 
 </div>
