--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -5,6 +5,8 @@
 
 .searchbar-container{
   background-color: $dark-green;
+  display: flex;
+  justify-content: center;
 }
 
 .w-70 {
@@ -16,13 +18,13 @@
 }
 
 .searchbar-wrapper {
-  flex: 2;
+  width: 750px;
   position: relative;
-
 }
 
 .searchbar-button {
   position: absolute;
-  left: 82.5%;
+  right: 10%;
+  top: 0;
   height: 45px;
 }
