--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
   <div class="searchbar-container text-center">
-    <div class="d-flex searchbar-container">
+    <div class="d-flex searchbar-wrapper">
           <%= f.input :title, label: false,
             placeholder: 'Where do you want to go?',
             wrapper_html: { class: "searchbar-wrapper" },
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <div class="row">
       <nav class="col-md-4 col-lg-2 d-md-block sidebar">
-        <%= render "/layouts/budgetslider" %>
+        <%= render "/layouts/budgetslider", f:f %>
         <hr>
 
             <h4 class="my-3">Trip Styles</h4>
