--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -45,9 +45,21 @@
 }
 
 .trip_destination {
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
   margin-top: 10px;
   margin-bottom: 10px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 6px, 0.4);
+}
+
+.trip_map {
+  height: 150px;
+  width: 200px;
 }
 
 .link-btn-container {
@@ -72,5 +84,3 @@
     color: $very-dark-green;
   }
 }
-
-
