--- a/app/assets/stylesheets/components/_planner/index.scss
+++ b/app/assets/stylesheets/components/_planner/index.scss
@@ -35,12 +35,14 @@
 
   .card-index-infos-custom {
     margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
 
     h2 {
       font-size: 18px;
       color: #333;
       margin-bottom: 10px;
-      text-align: center;
+      text-align: left;
     }
 
     p {
