--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,10 +16,17 @@
               <%= image_tag current_user.image_url, class: "card-trip-user avatar-bordered", alt: "dropdown menu" %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+
+            <% if current_user.trips.empty? %>
+              <p>You have no trip</p>
+            <% else %>
               <%= link_to "My messages", my_trip_path(current_user.trips.first.id), class: "dropdown-item" %>
-              <%= link_to "My trips", planner_trips_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+            <% end %>
+
+            <%= link_to "My trips", planner_trips_path, class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
             </div>
+
           </li>
         <% else %>
           <li class="nav-item">
