--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -35,10 +35,11 @@
 
 .button-green {
   background-color: $green;
+  font-size: 13px;
   color: white;
   font-weight: bold;
   border: none;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
