global worked on

--- a/app/assets/stylesheets/components/_planner/index.scss
+++ b/app/assets/stylesheets/components/_planner/index.scss
@@ -40,9 +40,8 @@
 
     h2 {
       font-size: 18px;
-      color: #333;
       margin-bottom: 10px;
-      text-align: left;
+      text-align: center;
     }
 
     p {
