--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -15,7 +15,7 @@
   h2 {
     font-size: 24px;
     color: $dark-green;
-    text-align: left;
+    text-align: center;
   }
 
   h3{
@@ -33,10 +33,11 @@
   img {
     width: 100%;
     object-fit: cover;
-    max-height: 150px;
+    max-height: 300px;
     margin-top: 15px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
   }
 }
 
@@ -83,4 +84,10 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     color: $very-dark-green;
   }
+}
+
+
+.delete{
+  display: flex;
+  justify-content: space-between;
 }
