--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,12 +1,12 @@
 <%= render "/layouts/navbar", hauteur: "100"  %>
 
-<%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
+<%= simple_form_for :filter, url: trips_path, method: :get, data: { controller: 'filters' } do |f| %>
   <div class="searchbar-container text-center">
     <div class="d-flex searchbar-wrapper">
           <%= f.input :title, label: false,
             placeholder: 'Where do you want to go?',
             wrapper_html: { class: "searchbar-wrapper" },
-            input_html: { class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 80%;" } %>
+            input_html: { value: @query, class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 80%;" } %>
           <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button" %>
     </div>
   </div>
