--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -44,4 +44,4 @@
       </div>
     </div>
   </div>
-<%= render "layouts/footer", position: "relative" %>
+<%= render "layouts/footer", position: "absolute" %>
