--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -12,7 +12,7 @@
       <div class="trip_destination">
         <div class="trip_destination_infos">
           <div class="trip_destination_header">
-            <h1><strong>#<%= i %></strong></h1>
+            <h1><strong>#<%= i+1 %></strong></h1>
             <h4><strong><%= destination.title %></strong></h4>
           </div>
           <div class="trip_destination_address"><%= destination.address %></div>
