--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -28,7 +28,7 @@
   </div>
 
   <div class="button-container">
-    <%= link_to 'Contact the planner', my_trips_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show button-disabled", data: { turbo_method: :post } %>
+    <%= link_to 'Contact the planner', my_trips_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show", data: { turbo_method: :post } %>
   </div>
 
 
