--- a/app/assets/stylesheets/components/_planner/_form.scss
+++ b/app/assets/stylesheets/components/_planner/_form.scss
@@ -14,7 +14,7 @@
   border-radius: 50rem;
   padding: 0.1rem 0.5rem;
   background-color: $green;
-  color: white;
+  color: white !important;
   border: 1px solid $dark-green;
   margin-right: 0.6rem;
   margin-bottom: 0.4rem;
