--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@ nav {
   color: white;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-  width: 85%;
+  // width: 85%;
   text-align: center;
 }
 
@@ -35,7 +35,7 @@ nav {
 }
 
 .img-navbar-height-100 {
-  width: 200px
+  width: 200px;
   margin-top: 20px;
 }
 
