--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "components/footer";
 @import "components/homepage";
 
+@import "components/customcheckbos";
+
 @import "components/show";
 @import "components/searchbar";
 @import "components/_planner/index";
