--- a/app/assets/stylesheets/components/_budgetslider.scss
+++ b/app/assets/stylesheets/components/_budgetslider.scss
@@ -1,96 +1,3 @@
-
-// .field > p {
-//   font-size: 8px;
-//   font-family: Roboto;
-//   margin-top: 5px;
-// }
-
-// .wrapper {
-//   width: 150px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-// .price-input {
-//   margin: 30px 0 35px;
-//   width: 100%;
-//   display: flex;
-//   font-size: 12px;
-// }
-
-// .price-input .field {
-//   height: 40px;
-//   width: 100%;
-//   display: flex;
-//   align-items: center;
-//   border-radius: 5px;
-// }
-
-// .field input {
-//   width: 60px;
-//   height: 70%;
-//   margin-left: 5px;
-//   border: 1px solid $dark-green;
-//   outline: none;
-//   text-align: center;
-//   border-radius: 5px;
-//   font-size: 12px;
-//   -moz-appearance: none;
-// }
-
-
-// .price-input input::-webkit-outer-spin-button,
-// .price-input input::-webkit-inner-spin-button {
-//   display: none;
-// }
-
-// .wrapper .separator {
-//   width: 100px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   font-size: 18px;
-//   margin: 0 5px;
-// }
-
-// .slider {
-//   height: 5px;
-//   border-radius: 5px;
-//   background: $green;
-//   position: relative;
-// }
-
-// .slider .progress {
-//   height: 5px;
-//   left: 25%;
-//   right: 25%;
-//   background: $very-dark-green;
-//   position: absolute;
-//   border-radius: 5px;
-// }
-
-// .range-input {
-//   position: relative;
-// }
-
-// .wrapper .range-input input {
-//   position: absolute;
-//   top: -100px;
-//   height: 5px;
-//   width: 100%;
-//   -webkit-appearance: none;
-//   background: none;
-// }
-
-// input[type="range"]::-webkit-slider-thumb {
-//   height: 17px;
-//   width: 17px;
-//   border-radius: 50%;
-//   -webkit-appearance: none;
-//   background: $very-dark-green;
-// }
-
 .range-label {
   display: inline-block;
   margin: 10px;
@@ -99,16 +6,17 @@
 
 .range-slider {
   width: 100%;
-  margin: auto;
   text-align: center;
   position: relative;
   height: 6em;
 
   input[type=number] {
-    border: 1px solid #ddd;
+    border: 2px solid $yellow;
     text-align: center;
+    margin-top: 15px;
     font-size: 1.6em;
     -moz-appearance: textfield;
+    border-radius: 5px;
   }
   input[type=number]::-webkit-outer-spin-button,
   input[type=number]::-webkit-inner-spin-button {
@@ -209,6 +117,7 @@
 .range-slider svg,
 .range-slider input[type=range] {
   position: absolute;
-  left: 0;
   bottom: 0;
+  width: 80%;
+  left: 25px;
 }
