--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,8 +21,9 @@
   color: white;
   font-weight: bold;
   border: none;
-  padding: 10px 20px;
+  padding: 0px 20px;
   border-radius: 15px;
+  text-align: center;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 
@@ -40,7 +41,7 @@
   font-weight: bold;
   border: none;
   padding: 5px 10px;
-  border-radius: 15px;
+  border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 
