--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,15 +8,16 @@
   // margin-top: auto;
   bottom: 0;
   width: 100%;
+  height: 100px;
 }
-.footer-relative {
-  position: relative;
-  height: 50px;
-}
-.footer-absolute {
-  position: absolute;
-  height: 50px;
-}
+// .footer-relative {
+//   position: relative;
+//   height: 50px;
+// }
+// .footer-absolute {
+//   position: absolute;
+//   height: 50px;
+// }
 .footer-links {
   display: flex;
   align-items: center;
