--- a/app/views/my/trips/show.html.erb
+++ b/app/views/my/trips/show.html.erb
@@ -70,7 +70,7 @@
 </div>
 
 
-<%= render "layouts/footer", position: "absolute" %>
+<%= render "layouts/footer" %>
 
 <script>
   document.getElementById('new_messages').addEventListener('keydown', function(event) {
