--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
             placeholder: 'Where do you want to go?',
             wrapper_html: { class: "searchbar-wrapper" },
             input_html: { class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 80%;" } %>
-          <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button" %>
+          <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button py-0" %>
     </div>
   </div>
 <% end %>
@@ -51,4 +51,4 @@
   </div>
 </div>
 
-<%= render "layouts/footer", position: "absolute" %>
+<%= render "layouts/footer" %>
