--- a/app/views/planner/trips/index.html.erb
+++ b/app/views/planner/trips/index.html.erb
@@ -5,8 +5,10 @@
       <div class="d-flex justify-content-between">
         <h1>All my trips</h1>
         <% if user_signed_in? %>
-          <%= link_to 'Add a trip', new_planner_trip_path, class: "button-dark-green" %>
+          <%= link_to new_planner_trip_path, class: "button-dark-green" do %>
+          <i class="fa-sharp fa-solid fa-plus me-2" style="color: #ffd600;"></i>Add a trip
           <% end %>
+        <% end %>
       </div>
     </div>
 
@@ -29,4 +31,4 @@
   </div>
 </div>
 
-<%= render "layouts/footer", position: "absolute" %>
+<%= render "layouts/footer" %>
