--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -40,7 +40,6 @@
     margin-top: 15px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
   }
 }
 
@@ -97,10 +96,8 @@
 }
 
 .button-container {
-  text-align: center;
-  margin-top: 20px;
+  margin: 25px 0;
   .link-btn-container {
-    margin-top: 20px;
     color: white;
     text-decoration: none;
   }
